--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "dependencies": {
       "alameda": "github:requirejs/alameda/0.2.0",
       "caldav": "github:mozilla-b2g/caldav/master",
+      "chai": "github:chaijs/chai/1.9.2#chai.js",
+      "chai-as-promised": "github:domenic/chai-as-promised/4.1.1",
       "eventemitter2": "github:asyncly/EventEmitter2/0.4.14#lib/eventemitter2.js",
       "ical": "github:mozilla-comm/ical.js/v0.0.2#build/ical.js",
-      "page": "github:visionmedia/page.js/1.3.2#index.js",
-      "uuid": "github:mozilla-b2g/node-uuid/v1.4.2"
+      "page": "github:tj/page.js/1.3.2#index.js",
+      "uuid": "github:broofa/node-uuid/v1.4.1"
     }
   }
 }
