--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "eventemitter2": "github:asyncly/EventEmitter2/0.4.14#lib/eventemitter2.js",
       "ical": "github:mozilla-comm/ical.js/v0.0.2#build/ical.js",
       "page": "github:visionmedia/page.js/1.3.2#index.js",
-      "uuid": "github:broofa/node-uuid/v1.4.1"
+      "uuid": "github:mozilla-b2g/node-uuid/v1.4.2"
     }
   }
 }
