--- a/bower.json
+++ b/bower.json
@@ -43,6 +43,7 @@
     "soft_keys_helper": "git@git.acadine.com:shared/soft_keys_helper.git#~0.2.0",
     "gaia-component": "git@git.acadine.com:gaia-components/gaia-component.git#~0.0.2",
     "h5-header": "git@git.acadine.com:gaia-components/h5-header.git#~0.0.1",
-    "h5-option-menu": "git@git.acadine.com:gaia-components/h5-option-menu.git#~0.3.4"
+    "h5-option-menu": "git@git.acadine.com:gaia-components/h5-option-menu.git#~0.3.4",
+    "h5-separator": "git@git.acadine.com:gaia-components/h5-separator.git"
   }
 }
