--- a/bower.json
+++ b/bower.json
@@ -42,6 +42,7 @@
     "navigation_manager": "git@git.acadine.com:shared/navigation_manager.git#~0.0.20",
     "soft_keys_helper": "git@git.acadine.com:shared/soft_keys_helper.git#~0.2.0",
     "gaia-component": "git@git.acadine.com:gaia-components/gaia-component.git#~0.0.2",
-    "h5-header": "git@git.acadine.com:gaia-components/h5-header.git#~0.0.1"
+    "h5-header": "git@git.acadine.com:gaia-components/h5-header.git#~0.0.1",
+    "h5-option-menu": "git@git.acadine.com:gaia-components/h5-option-menu.git#~0.3.4"
   }
 }
