--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,6 @@
     "component_utils": "git@git.acadine.com:shared/component_utils.git#~0.0.1",
     "confirm": "git@git.acadine.com:shared/confirm.git#~0.0.1",
     "date_time_helper": "git@git.acadine.com:shared/date_time_helper.git#~0.0.1",
-    "gaia-icons": "git@git.acadine.com:shared/gaia-icons.git#~0.0.1",
     "gaia-header": "git@git.acadine.com:shared/gaia-header.git#~0.0.1",
     "gaia_subheader": "git@git.acadine.com:shared/gaia_subheader.git#~0.0.1",
     "gesture_detector": "git@git.acadine.com:shared/gesture_detector.git#~0.0.1",
@@ -49,6 +48,7 @@
     "h5-input-wrapper": "git@git.acadine.com:gaia-components/h5-input-wrapper.git#~0.0.2",
     "h5-two-line-li": "git@git.acadine.com:gaia-components/h5-two-line-li.git#~0.0.4",
     "h5-dialog": "git@git.acadine.com:gaia-components/h5-dialog.git#~0.0.5",
-    "h5-list-button": "git@git.acadine.com:gaia-components/h5-list-button.git#~0.0.2"
+    "h5-list-button": "git@git.acadine.com:gaia-components/h5-list-button.git#~0.0.2",
+    "h5-icons": "git@git.acadine.com:gaia-components/h5-icons.git#~0.1.5"
   }
 }
