Update bower shorthand resolver

--- a/bower.json
+++ b/bower.json
@@ -12,43 +12,43 @@
     "tests"
   ],
   "dependencies": {
-    "buttons": "git@git.acadine.com:shared/buttons.git#~0.0.1",
-    "component_utils": "git@git.acadine.com:shared/component_utils.git#~0.0.1",
-    "confirm": "git@git.acadine.com:shared/confirm.git#~0.0.1",
-    "date_time_helper": "git@git.acadine.com:shared/date_time_helper.git#~0.0.1",
-    "gaia-header": "git@git.acadine.com:shared/gaia-header.git#~0.0.1",
-    "gaia_subheader": "git@git.acadine.com:shared/gaia_subheader.git#~0.0.1",
-    "gesture_detector": "git@git.acadine.com:shared/gesture_detector.git#~0.0.1",
-    "html_imports": "git@git.acadine.com:shared/html_imports.git#~0.0.1",
-    "config": "git@git.acadine.com:shared/config.git#~0.0.1",
-    "icons": "git@git.acadine.com:shared/icons.git#~0.0.1",
-    "input_areas": "git@git.acadine.com:shared/input_areas.git#~0.0.1",
-    "input_parser": "git@git.acadine.com:shared/input_parser.git#~0.0.1",
-    "gaia-theme": "git@git.acadine.com:shared/gaia-theme.git#~0.0.1",
-    "l10n_date": "git@git.acadine.com:shared/l10n_date.git#~0.0.1",
-    "l10n": "git@git.acadine.com:shared/l10n.git#~0.0.1",
-    "date": "git@git.acadine.com:shared/date.git#~0.0.1",
-    "notification_helper": "git@git.acadine.com:shared/notification_helper.git#~0.0.1",
-    "status": "git@git.acadine.com:shared/status.git#~0.0.1",
-    "progress_activity": "git@git.acadine.com:shared/progress_activity.git#~0.0.1",
-    "lazy_loader": "git@git.acadine.com:shared/lazy_loader.git#~0.0.1",
-    "tabs": "git@git.acadine.com:shared/tabs.git#~0.0.1",
-    "switches": "git@git.acadine.com:shared/switches.git#~0.0.1",
-    "toolbars": "git@git.acadine.com:shared/toolbars.git#~0.0.1",
-    "test_integration": "git@git.acadine.com:shared/test_integration.git#~0.0.1",
+    "buttons": "shared/buttons#~0.0.1",
+    "component_utils": "shared/component_utils#~0.0.1",
+    "confirm": "shared/confirm#~0.0.1",
+    "date_time_helper": "shared/date_time_helper#~0.0.1",
+    "gaia-header": "shared/gaia-header#~0.0.1",
+    "gaia_subheader": "shared/gaia_subheader#~0.0.1",
+    "gesture_detector": "shared/gesture_detector#~0.0.1",
+    "html_imports": "shared/html_imports#~0.0.1",
+    "config": "shared/config#~0.0.1",
+    "icons": "shared/icons#~0.0.1",
+    "input_areas": "shared/input_areas#~0.0.1",
+    "input_parser": "shared/input_parser#~0.0.1",
+    "gaia-theme": "shared/gaia-theme#~0.0.1",
+    "l10n_date": "shared/l10n_date#~0.0.1",
+    "l10n": "shared/l10n#~0.0.1",
+    "date": "shared/date#~0.0.1",
+    "notification_helper": "shared/notification_helper#~0.0.1",
+    "status": "shared/status#~0.0.1",
+    "progress_activity": "shared/progress_activity#~0.0.1",
+    "lazy_loader": "shared/lazy_loader#~0.0.1",
+    "tabs": "shared/tabs#~0.0.1",
+    "switches": "shared/switches#~0.0.1",
+    "toolbars": "shared/toolbars#~0.0.1",
+    "test_integration": "shared/test_integration#~0.0.1",
     "accessibility_helper": "git@git.acadine.com:shared/accessibility_helper#~0.0.1",
-    "performance_testing_helper": "git@git.acadine.com:shared/performance_testing_helper.git#~0.0.1",
-    "navigation_manager": "git@git.acadine.com:shared/navigation_manager.git#~0.0.20",
-    "soft_keys_helper": "git@git.acadine.com:shared/soft_keys_helper.git#~0.2.0",
-    "gaia-component": "git@git.acadine.com:gaia-components/gaia-component.git#~0.0.2",
-    "h5-header": "git@git.acadine.com:gaia-components/h5-header.git#~0.0.1",
-    "h5-option-menu": "git@git.acadine.com:gaia-components/h5-option-menu.git#~0.3.4",
-    "h5-separator": "git@git.acadine.com:gaia-components/h5-separator.git",
-    "h5-checkbox": "git@git.acadine.com:gaia-components/h5-checkbox.git#~0.0.9",
-    "h5-input-wrapper": "git@git.acadine.com:gaia-components/h5-input-wrapper.git#~0.0.2",
-    "h5-two-line-li": "git@git.acadine.com:gaia-components/h5-two-line-li.git#~0.0.4",
-    "h5-dialog": "git@git.acadine.com:gaia-components/h5-dialog.git#~0.0.5",
-    "h5-list-button": "git@git.acadine.com:gaia-components/h5-list-button.git#~0.0.2",
-    "h5-icons": "git@git.acadine.com:gaia-components/h5-icons.git#~0.1.5"
+    "performance_testing_helper": "shared/performance_testing_helper#~0.0.1",
+    "navigation_manager": "shared/navigation_manager#~0.0.20",
+    "soft_keys_helper": "shared/soft_keys_helper#~0.2.0",
+    "gaia-component": "gaia-components/gaia-component#~0.0.2",
+    "h5-header": "gaia-components/h5-header#~0.0.1",
+    "h5-option-menu": "gaia-components/h5-option-menu#~0.3.4",
+    "h5-separator": "gaia-components/h5-separator",
+    "h5-checkbox": "gaia-components/h5-checkbox#~0.0.9",
+    "h5-input-wrapper": "gaia-components/h5-input-wrapper#~0.0.2",
+    "h5-two-line-li": "gaia-components/h5-two-line-li#~0.0.4",
+    "h5-dialog": "gaia-components/h5-dialog#~0.0.5",
+    "h5-list-button": "gaia-components/h5-list-button#~0.0.2",
+    "h5-icons": "gaia-components/h5-icons#~0.1.5"
   }
 }
